[gd_scene load_steps=7 format=2]

[ext_resource path="res://Server.gd" type="Script" id=1]
[ext_resource path="res://assets/Isometric/towerRound_sampleB_N.png" type="Texture" id=2]
[ext_resource path="res://assets/fa/wrench-solid.svg" type="Texture" id=3]
[ext_resource path="res://assets/Isometric/woodStructure_W.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 65.6288
height = 37.147

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "LoadBalancer",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "StaticServer",
"speed": 5.0
} ]

[node name="Server" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
scale = Vector2( 0.25, 0.25 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CollisionShape2D"]
position = Vector2( 2.05334, 0 )
frames = SubResource( 2 )
animation = "LoadBalancer"

[node name="DNSNameLabel" type="Label" parent="."]
margin_left = -47.3266
margin_top = 26.3723
margin_right = 47.6734
margin_bottom = 40.3723
text = "dns_name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfigWindow" type="TabContainer" parent="."]
margin_left = 38.0
margin_top = -29.0
margin_right = 178.0
margin_bottom = 55.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleConfig" type="ToolButton" parent="."]
margin_left = -32.0
margin_top = -22.0
margin_right = 492.0
margin_bottom = 498.0
rect_scale = Vector2( 0.03, 0.03 )
button_mask = 3
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ToggleConfig" to="." method="_on_ToggleConfig_pressed"]
